--- a/机器学习/markdown/概率论.md
+++ b/机器学习/markdown/概率论.md
@@ -12,7 +12,7 @@
 
 # CS229 机器学习课程复习材料-概率论
 
-[TOC]
+<!-- [TOC] -->
 ## 概率论复习和参考
 
 概率论是对不确定性的研究。通过这门课，我们将依靠概率论中的概念来推导机器学习算法。这篇笔记试图涵盖适用于**CS229**的概率论基础。概率论的数学理论非常复杂，并且涉及到“分析”的一个分支：测度论。在这篇笔记中，我们提供了概率的一些基本处理方法，但是不会涉及到这些更复杂的细节。
